--- a/css/index.css
+++ b/css/index.css
@@ -1,73 +1,223 @@
 /* styles.css */
-body {
-  font-family: Arial, sans-serif;
+* {
   margin: 0;
   padding: 0;
-  line-height: 1.6;
+  box-sizing: border-box;
 }
-header {
+.top{
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 30px;
+  
+  height: 30px;
   background-color: #F6F6F7;
-  padding: 20px;
+  
+  
 }
-header h1 {
-  color: #222222;
-  margin: 0;
-}
-main {
+.mycart {
   display: flex;
-  justify-content: space-around;
-  padding: 20px;
-}
-.product {
-  width: 300px;
-  text-align: center;
-}
-.product img {
-  max-width: 100%;
-}
-.product h2 {
-  margin-top: 10px;
-  color: #222222;
-}
-.sizes {
-  display: flex;
-  justify-content: space-around;
-  margin-top: 10px;
-}
-.sizes label {
-  cursor: pointer;
-}
-button {
-  margin-top: 10px;
-  background-color: #C90000;
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  cursor: pointer;
-  transition: background-color 0.2s;
-}
-button:hover {
-  background-color: #8F0000;
-}
-#error {
-  color: #C90000;
-  margin-top: 10px;
-}
-.mini-cart {
   width: 200px;
+  margin-right: 70px;
+  cursor: pointer; 
+  justify-content: center;
+
+  position: relative;
+}
+/* click */
+.mycart::after {
+  content: '';
+  position: absolute;
+  top: 26px;
+  left:-226px;
+  width: 50px;
+  height: 2px;
+   /* Change this to the color of the line you want */
+}
+.mycart.clicked::after {
+  width: 226px; /* Set the width to 50px when clicked to make the line visible */
+  background-color: #CCCCCC;
+}
+
+.mycart.clicked {
+  border: 2px solid #CCCCCC; 
+  border-bottom: 1px solid #fff;
+  background-color: #fff;
+}
+.mycart h2,
+span {
+  height: 30px;
+  /* text-align: end; */
+  line-height: 30px;
+  font-weight: 500;
+  font-size: 18px;
+  color: #888888;
   text-align: center;
-  border: 1px solid #CCCCCC;
 }
-.mini-cart h2 {
-  margin: 0;
-  padding: 10px;
-  background-color: #F6F6F7;
+/* cartitems */
+/* Hide the cart items by default */
+.hidden {
+  display: none;
 }
-#cartItems {
-  list-style: none;
+
+/* Add some styling for the cart items */
+#cartList {
+  list-style-type: none;
+  position: absolute;
+  right: 70px; /* Adjust the right position as needed */
+  top: 60px;
   padding: 0;
+  background-color: #ffffff;
+
+  /* Set the other borders to white */
+  border-right: 2px solid #CCCCCC;
+  border-bottom: 2px solid #CCCCCC;
+  border-left: 2px solid #CCCCCC;
+  
+   
 }
-#cartItems li {
-  padding: 10px;
-  border-bottom: 1px solid #CCCCCC;
+
+/* .cart list li{
+  position: relative;
+  
+} */
+.item-details {
+  display: flex;
+  /* position: absolute; */
+  /* s */
+  padding: 20px 20px;
+  
+  
+}
+
+.item-details img {
+  width: 120px;
+  height: 180px;
+  margin-right: 10px;
+}
+
+.product-details span{
+  width: 250px;
+  text-align: left;
+  
+}
+
+/* Styles for the product name (Classic Tee) */
+.product-details span:first-child {
+  display: block;
+  
+  font-size: 18px;
+  font-weight: bold;
+  color: #222222;
+  
+  margin-bottom: 5px; /* Add some spacing after the product name */
+}
+
+/* Styles for the quantity and price */
+.product-details span:nth-child(2) {
+  display: block;
+  font-size: 16px;
+  color: #333333;
+}
+
+/* Styles for the size */
+.product-details span:nth-child(3) {
+  display: block;
+  font-size: 16px;
+  color: #333333;
+}
+
+/* product */
+.product {
+  display: flex;
+  margin-top: 60px;
+  padding-left: 200px;
+  padding-right: 150px;
+  justify-content: space-between;
+}
+.product .left .img {
+  margin-top: 30px;
+  padding-left: 70px;
+  width: 400px;
+}
+.right {
+  width: 700px;
+}
+.right h3 {
+  margin-bottom: 50px;
+  font-weight: 500;
+  font-size: 30px;
+}
+.right span,
+i {
+  font-weight: 700;
+  font-style: normal;
+  font-size: 20px;
+}
+.right p {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  color: #888888;
+  font-size: 20px;
+}
+
+/* size */
+.right .size {
+  margin-bottom: 15px;
+  font-size: 20px;
+}
+.right .size span {
+  color: #C90000;
+}
+.right ul {
+  display: flex;
+  padding-left: 0;
+  list-style: none;
+}
+.button li {
+  display: block;
+  margin-right: 10px;
+  width: 60px;
+  height: 60px;
+  line-height: 60px;
+  text-align: center;
+  font-size: 18px;
+  color: #888888;
+  border: 2px solid #CCCCCC;
+  /* Light grey border */
+}
+/* click */
+
+.button li {
+  /*  same  */
+  cursor: pointer;
+  transition: background-color 0.2s ease; 
+}
+
+/* Style the selected button */
+.button li.selected {
+  background-color: #000000; /* Black background color */
+  color: #FFFFFF; /* White text color on black background */
+}
+/* add cart */
+.right .addcart button {
+  display: block;
+  margin-top: 30px;
+  width: 200px;
+  height: 50px;
+  line-height: 50px;
+  font-size: 18px;
+  font-weight: 700;
+  text-align: center;
+  color: #222222;
+  border: 2px solid #222222;
+  /* Add rounded corners for a more modern look */
+  background-color: transparent;
+  /* Set the background color to transparent */
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+  /* Add a 0.2-second transition to animate the background color change on hover */
+}
+.right .addcart button:hover{
+  background-color: #222222;
+  color: #F6F6F7;
 }
