--- a/less/index.less
+++ b/less/index.less
@@ -1,90 +1,101 @@
 //out:../css/
 /* styles.css */
 
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    line-height: 1.6;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-header {
+.mycart{
+    margin-top: 30px;
+    display: flex;
+    padding-right: 70px;
     background-color: #F6F6F7;
-    padding: 20px;
+    justify-content: end;
+}
+.mycart h2, span{
+    
+    height: 30px;
+    text-align: end;
+    line-height: 30px;
+    font-weight: 500;
+    font-size: 18px;
+    color: #888888 ;
 }
 
-header h1 {
-    color: #222222;
-    margin: 0;
-}
-
-main {
+.product{
     display: flex;
-    justify-content: space-around;
-    padding: 20px;
+    margin-top: 60px;
+    padding-left: 200px;
+    padding-right: 150px;
+    justify-content: space-between;
+}
+.product .left .img{
+    margin-top: 30px;
+    padding-left: 70px;
+    width: 400px;
+    // height: 500px;
+
+}
+.right{
+    width: 700px;
+    
+}
+.right h3{
+    margin-bottom: 50px;
+    font-weight: 500;
+    font-size: 30px;
 }
 
-.product {
-    width: 300px;
-    text-align: center;
+.right span, i{
+    
+    font-weight: 700;
+    font-style: normal;
+    font-size: 20px;
 }
-
-.product img {
-    max-width: 100%;
+.right p{
+    margin-top: 50px;
+    margin-bottom: 50px;
+    color: #888888;
+    font-size: 20px;
 }
-
-.product h2 {
-    margin-top: 10px;
-    color: #222222;
+.right .size{
+    margin-bottom: 15px;
+    font-size: 20px;
+   
 }
-
-.sizes {
-    display: flex;
-    justify-content: space-around;
-    margin-top: 10px;
-}
-
-.sizes label {
-    cursor: pointer;
-}
-
-button {
-    margin-top: 10px;
-    background-color: #C90000;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
-    transition: background-color 0.2s;
-}
-
-button:hover {
-    background-color: #8F0000;
-}
-
-#error {
+.right .size span{
     color: #C90000;
-    margin-top: 10px;
 }
-
-.mini-cart {
-    width: 200px;
-    text-align: center;
-    border: 1px solid #CCCCCC;
-}
-
-.mini-cart h2 {
-    margin: 0;
-    padding: 10px;
-    background-color: #F6F6F7;
-}
-
-#cartItems {
+.right ul{
+    display: flex;
+    padding-left: 0;
     list-style: none;
-    padding: 0;
 }
-
-#cartItems li {
-    padding: 10px;
-    border-bottom: 1px solid #CCCCCC;
+.button li {
+    display: block;
+    margin-right: 10px;
+    width: 60px;
+    height: 60px;
+    line-height: 60px;
+    text-align: center;
+    font-size: 18px;
+    color: #888888; 
+    border: 2px solid #CCCCCC; /* Light grey border */
+    
+  }
+ .right .addcart button {
+  display: block;
+  margin-top: 30px;
+  width: 200px;
+  height: 50px;
+  line-height: 50px;
+  font-weight: 700;
+  text-align: center;
+  color: #222222;
+  border: 2px solid #222222;
+  border-radius: 4px; /* Add rounded corners for a more modern look */
+  background-color: transparent; /* Set the background color to transparent */
+  cursor: pointer;
+  transition: background-color 0.2s ease; /* Add a 0.2-second transition to animate the background color change on hover */
 }
